--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1777,7 +1777,7 @@ body {
   color: #767676 !important;
 }
 .cid-qJhiOjDWrn {
-  padding-top: 30px;
+  padding-top: 45px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
@@ -1803,7 +1803,6 @@ body {
   width: 100%;
   height: 100%;
   background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
@@ -1812,7 +1811,7 @@ body {
   background: transparent !important;
 }
 .cid-qJhiOjDWrn .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
+  opacity: 0.3 !important;
 }
 .cid-qJhiOjDWrn .mbr-gallery-title {
   font-size: .9em;
@@ -1833,8 +1832,7 @@ body {
   z-index: -1;
   position: absolute;
   background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0.7;
+  opacity: 0.3;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
@@ -1864,6 +1862,18 @@ body {
 .cid-qJhjcOUBDa .input-group-btn {
   display: block;
   text-align: center;
+}
+.cid-qJtsCMoYri {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+}
+.cid-qJtsCMoYri .mbr-iconfont-social {
+  font-size: 32px;
+  color: #232323;
+}
+.cid-qJtsCMoYri .social-list a:focus {
+  text-decoration: none;
 }
 .cid-qJhjyz7KTF {
   padding-top: 60px;
