--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,4 +1,4 @@
 @font-face {
-   font-family: 'Saturday Nights Personal Use';
-   src: url('Saturday Nights Personal Use/font.ttf');
+   font-family: 'TCM_____';
+   src: url('TCM_____/font.TTF');
 }
