create github pages

--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -2,3 +2,7 @@
    font-family: 'TCM_____';
    src: url('TCM_____/font.TTF');
 }
+@font-face {
+   font-family: 'Saturday Nights Personal Use';
+   src: url('Saturday Nights Personal Use/font.ttf');
+}
