--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1393,6 +1393,71 @@ body {
     width: 100% !important;
   }
 }
+.cid-qJVvirAWgj {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qJVvirAWgj .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-qJVvirAWgj .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qJVvirAWgj .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qJVvirAWgj .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qJVvirAWgj .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-qJVvirAWgj .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-qJVvirAWgj .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-qJVvirAWgj .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-qJVvirAWgj .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-qJVvirAWgj .mbr-gallery-item > div > span {
+  text-align: center;
+}
 .cid-qJhhPdrxux .navbar {
   background: #ffffff;
   transition: none;
@@ -1773,66 +1838,6 @@ body {
 .cid-qJhhPdrxux .nav-link:hover,
 .cid-qJhhPdrxux .dropdown-item:hover {
   color: #767676 !important;
-}
-.cid-qJhiOjDWrn {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-qJhiOjDWrn .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qJhiOjDWrn .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qJhiOjDWrn .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qJhiOjDWrn .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qJhiOjDWrn .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qJhiOjDWrn .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qJhiOjDWrn .mbr-gallery-item > div:hover:before {
-  opacity: 0.3 !important;
-}
-.cid-qJhiOjDWrn .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qJhiOjDWrn .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.3;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
 }
 .cid-qJhjcOUBDa {
   padding-top: 90px;
