create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2039,10 +2039,11 @@ body {
   color: #232323;
 }
 .cid-r8ymJFf0PD P {
-  color: #232323;
+  color: #073b4c;
 }
 .cid-r8ymJFf0PD H2 {
   text-align: right;
+  color: #0a397e;
 }
 #instagram-feed-block-9 .inst__title {
   color: #072e66;
