create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2021,7 +2021,7 @@ body {
   text-align: right;
 }
 .cid-r8ymJFf0PD H2 {
-  text-align: right;
+  text-align: left;
   color: #0a397e;
 }
 #instagram-feed-block-9 .inst__title {
